# ChangeLog for app-emacs/flim
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emacs/flim/ChangeLog,v 1.38 2009/07/20 21:30:43 fauli Exp $

  20 Jul 2009; Christian Faulhammer <fauli@gentoo.org> -flim-1.14.8.ebuild:
  clean up

  16 Jul 2009; nixnut <nixnut@gentoo.org> ChangeLog:
  ppc stable #274553

  12 Jul 2009; Raúl Porcel <armin76@gentoo.org> flim-1.14.9.ebuild:
  sparc stable wrt #274553

  05 Jul 2009; Markus Meier <maekke@gentoo.org> flim-1.14.9.ebuild:
  amd64 stable, bug #274553

  27 Jun 2009; Tobias Klausmann <klausman@gentoo.org> flim-1.14.9.ebuild:
  Stable on alpha, bug #274553

  17 Jun 2009; Christian Faulhammer <fauli@gentoo.org> flim-1.14.9.ebuild:
  stable x86, bug 274553

*flim-1.14.9 (16 May 2009)

  16 May 2009; Ulrich Mueller <ulm@gentoo.org> +flim-1.14.9.ebuild:
  Version bump. Update SRC_URI.

  05 May 2009; Ulrich Mueller <ulm@gentoo.org> flim-1.14.8.ebuild:
  Fix dependencies, blocker belongs in RDEPEND only.

  05 May 2009; Christian Faulhammer <fauli@gentoo.org> flim-1.14.8.ebuild:
  set explicit RDEPEND

  15 Oct 2007; Christian Faulhammer <opfer@gentoo.org> flim-1.14.8.ebuild:
  stable amd64, bug 195107

  11 Oct 2007; Ulrich Mueller <ulm@gentoo.org> -flim-1.14.6.ebuild,
  -flim-1.14.7.ebuild:
  Remove old.

  11 Oct 2007; Lars Weiler <pylon@gentoo.org> flim-1.14.8.ebuild:
  stable ppc, bug #195107

  08 Oct 2007; Raúl Porcel <armin76@gentoo.org> flim-1.14.8.ebuild:
  alpha/sparc stable wrt #195107

  08 Oct 2007; Christian Faulhammer <opfer@gentoo.org> flim-1.14.8.ebuild:
  stable x86, bug 195107

  06 Oct 2007; Ulrich Mueller <ulm@gentoo.org> flim-1.14.6.ebuild,
  flim-1.14.7.ebuild, flim-1.14.8.ebuild:
  Minor QA: quote some variables. Add a die command.

  15 May 2007; Ulrich Mueller <ulm@gentoo.org> flim-1.14.6.ebuild,
  flim-1.14.7.ebuild, flim-1.14.8.ebuild:
  Don't provide virtual/flim, it is a new-style virtual now.
