@@ -1,4 +1,1 @@
-
-;;; FLIM site-lisp configuration
-
 (add-to-list 'load-path "@SITELISP@")
