@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-emacs/flim/flim-1.14.8.ebuild,v 1.15 2009/05/16 20:09:55 ulm Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emacs/flim/flim-1.14.9-r1.ebuild,v 1.1 2009/11/13 14:49:07 ulm Exp $
 
 inherit elisp
 
@@ -17,7 +17,8 @@ DEPEND=">=app-emacs/apel-10.3"
 RDEPEND="${DEPEND}
 	!app-emacs/limit"
 
-SITEFILE=60${PN}-gentoo.el
+ELISP_PATCHES="${P}-mel-q-ccl.patch"
+SITEFILE="60${PN}-gentoo.el"
 
 src_compile() {
 	emake PREFIX="${ED}/usr" \
@@ -31,8 +32,7 @@ src_install() {
 		VERSION_SPECIFIC_LISPDIR="${ED}/${SITELISP}" install \
 		|| die "emake install failed"
 
-	elisp-site-file-install "${FILESDIR}/${SITEFILE}" \
-		|| die "elisp-site-file-install failed"
+	elisp-site-file-install "${FILESDIR}/${SITEFILE}" || die
 
-	dodoc FLIM-API.en NEWS VERSION README* ChangeLog
+	dodoc FLIM-API.en NEWS VERSION README* ChangeLog || die "dodoc failed"
 }
