@@ -1,6 +1,13 @@
 # ChangeLog for app-emacs/flim
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emacs/flim/ChangeLog,v 1.38 2009/07/20 21:30:43 fauli Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emacs/flim/ChangeLog,v 1.39 2009/11/13 14:49:07 ulm Exp $
+
+*flim-1.14.9-r1 (13 Nov 2009)
+
+  13 Nov 2009; Ulrich Mueller <ulm@gentoo.org> +flim-1.14.9-r1.ebuild,
+  +files/flim-1.14.9-mel-q-ccl.patch:
+  Fix unibyte/multibyte issues with Emacs 23. Thanks to Jan Seeger
+  <jan.seeger@gmail.com> in bug 292449.
 
   20 Jul 2009; Christian Faulhammer <fauli@gentoo.org> -flim-1.14.8.ebuild:
   clean up
@@ -130,7 +137,7 @@
 *flim-1.14.4 (31 Oct 2002)
 
   31 Oct 2002; Matthew Kennedy <mkennedy@gentoo.org> ChangeLog,
-  flim-1.14.4.ebuild, files/60flim-gentoo.el, 
+  flim-1.14.4.ebuild, files/60flim-gentoo.el,
   files/digest-flim-1.14.4 :
 
   Initial import.
